# SFML-Playground

./: CMakeLists.txt
shaders/: HexagonalTruchet.frag
src/: Button.cpp  Button.hpp  Game.cpp  Game.hpp  StandardCursor.cpp  StandardCursor.hpp  TextInput.cpp  UI.cpp  UI.hpp  main.cpp  main2.cpp  pratibha.hpp  usefull_libs.cpp
src/UI/: Button.cpp  Button.hpp  StandardCursor.hpp
src/fonts/: BungeeFont.hpp  JBmono.hpp  Nunito.hpp  Roboto-Regular.hpp
